--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 <header>
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg ">
-      <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt="logo"></a>
+      <a class="navbar-brand" href="index.html">
+        <img class="white-logo" src="assets/img/logo.png" alt="logo">
+      <img class="black-logo" src="assets/img/black-logo.png" alt="logo">
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
       </button>
@@ -45,30 +48,30 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home </a>
+            <a class="nav-link" href="index.html">Home </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown_toggle" href="#">Our Services <i class="far fa-chevron-down"></i></a>
             <ul class="sub-menu" >
-              <li><a href="">Service 1</a></li>
-              <li><a href="">Service 2</a></li>
-              <li><a href="">Service 3</a></li>
+              <li><a href="service-1.html">Service 1</a></li>
+              <li><a href="service-2.html">Service 2</a></li>
+              <li><a href="service-3.html">Service 3</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Reviews</a>
+            <a class="nav-link " href="reviews.html">Reviews</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Contact Us</a>
+            <a class="nav-link " href="contact.html">Contact Us</a>
           </li>
         </ul>
 
         <ul class="navbar-nav ml-auto">
           <li class="nav-item-button">
-            <a class="nav-link request-btn" href="#">Request A Quote </a>
+            <a class="nav-link request-btn" href="request.html">Request A Quote </a>
           </li>
         </ul>
       </div>
@@ -80,7 +83,7 @@
 <div class="banner-area" style="background:url(assets/img/banner.webp);">
   <div class="container">
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-lg-8">
         <div class="banner-text">
           <h1 class="text-white">Unique Solutions For Large & Small Charging Stations</h1>
           <p>Our residential, commercial, and fast charging stations are widely compatible, built on open standards, and designed to be accessible for everyone.</p>
@@ -101,7 +104,7 @@
 <section class="cta-area">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-5">
         <div class="cta-left">
           <p class="small-heading">Hundreds Of Thousands Of Places To Charge
           </p>
@@ -110,7 +113,7 @@
         </div>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-7">
         <div class="cta-right">
           <p>For more than a decade, we’ve been building the fueling network of the future. We have delivered more places to charge than anyone else, and people count on us for charging all day, every day. Now, we have built a fully integrated portfolio of hardware, cloud services and support with the best technology in the industry.</p>
           <div class="cta-button-group">
@@ -206,12 +209,12 @@
 <section class="pops-area">
 <div class="container">
   <div class="row">
-    <div class="col-md-4 col-lg-6 pr-md-0">
+    <div class=" col-lg-6 pr-lg-0">
       <div class="pops-img">
         <img src="assets/img/pops-img.jpg" alt="img">
       </div>
     </div>
-    <div class="col-md-8 col-lg-6 pl-md-0">
+    <div class=" col-lg-6 pl-lg-0">
       <div class="pops-text">
         <h2>Safe & Easy To Use Charging For Homes And Apartments!!
         </h2>
@@ -455,68 +458,55 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-lg-3">
-        <div class="footer-inner pr-md-4">
+      <div class="col-lg-4">
+        <div class="footer-inner pr-md-5  ">
           <h4>Quick Contact          </h4>
-          <p>If you have any questions or need help, feel free to contact with our team.
+          <p>If you have any questions or need help,<br> feel free to contact with our team.
           </p>
           <div class="quick-contact">
-            <a href=""><i class="fas fa-envelope"></i> Info@cms.com</a>
-            <a href=""><i class="fas fa-phone-alt"></i> 02 01061245741</a>
+            <a href="mailto:robert@hmanelectric.com"><i class="fas fa-envelope"></i> robert@hmanelectric.com</a>
+            <a href="tel:+1509-466-0303"><i class="fas fa-phone-alt"></i> 509-466-03031</a>
           </div>
-          <p>2307 Beverley Rd Brooklyn, New York 11226 United States
+          <p>7014 N. COUNTRY HOMES BLVD.<br>
+            SPOKANE, WA 99208
           </p>
-          <a href="" class="get-direction"><i class="fas fa-map-marker-alt"></i> Get Directions</a>
+          <p>HOURS: MON-FRI 8AM – 5PM</p>
+          <a href="https://goo.gl/maps/29TrEgzFCx56FMRr5" class="get-direction"><i class="fas fa-map-marker-alt"></i> Get Directions</a>
         </div>
       </div>
 
       <div class="col-lg-2">
         <div class="footer-inner ">
-          <h4> Company</h4>
+          <h4> Information</h4>
           <ul>
-            <li><a href="">About Us </a></li>
-            <li><a href=""> Sustainability</a></li>
-            <li><a href="">Leadership Team </a></li>
-            <li><a href=""> News & Media</a></li>
-            <li><a href=""> Our Products</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="col-lg-2">
-        <div class="footer-inner">
-          <h4> Solutions</h4>
-          <ul>
-            <li><a href=""> Business & Commercial</a></li>
-            <li><a href=""> Fleets & Automakers</a></li>
-            <li><a href="">Drivers & Personal Use </a></li>
-            <li><a href="">Government & Utilities </a></li>
-            <li><a href="">Public Charging Stations </a></li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="col-lg-2">
-        <div class="footer-inner">
-          <h4>Industries </h4>
-          <ul>
-            <li><a href=""> Workplaces</a></li>
-            <li><a href=""> Retail & Hospitality</a></li>
-            <li><a href=""> Commercial Parking</a></li>
-            <li><a href=""> Fuel Retailers</a></li>
-            <li><a href=""> Residential</a></li>
+            <li><a href="index.html">Home </a></li>
+            <li><a href="about.html">About Us </a></li>
+            <li><a href="services.html">Our Services </a></li>
+            <li><a href="privacy.html">Privacy Policy </a></li>
           </ul>
         </div>
       </div>
 
       <div class="col-lg-3">
         <div class="footer-inner">
-          <h4>Become A Partner </h4>
-          <a href="" class="custom-btn"> Request A Quote <i class="far fa-long-arrow-right"></i></a>
+          <h4> Links</h4>
+          <ul>
+            <li><a href="reviews.html"> Reviews</a></li>
+            <li><a href="contact.html"> Contact Us</a></li>
+            <li><a href="request.html">  Request A Quote</a></li>
+            <li><a href="terms.html">Terms & Conditions</a></li>
+          </ul>
+        </div>
+      </div>
+
+ 
+
+      <div class="col-lg-3">
+        <div class="footer-inner">
+          <h4>Interested? </h4>
+          <a href="request.html" class="custom-btn"> Request A Quote <i class="far fa-long-arrow-right"></i></a>
           <ul class="social-link">
-            <li><a href=""> <i class="fab fa-facebook-f"></i></a></li>
-            <li><a href=""> <i class="fab fa-twitter"></i></a></li>
-            <li><a href=""> <i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.facebook.com/Handyman.Electric.LLC" target="_blank"> <i class="fab fa-facebook-f"></i></a></li>
           </ul>
         </div>
       </div>
@@ -540,18 +530,18 @@
             <img src="assets/img/fav-logo.webp" alt="logo icon">
           </div>
           <div class="copyright-text">
-            <p>©2022 Charg, All Rights Reserved. </p>
+            <p>© SPOKANE STARLINK INSTALLATION. ALL RIGHTS RESERVED. </p>
             <ul>
-              <li><a href=""> Terms & Conditions &nbsp;  - </a></li>
-              <li><a href=""> Privacy Policy </a></li>
+              <li><a href="terms.html"> Terms & Conditions  &nbsp;  - </a></li>
+              <li><a href="privacy.html"> Privacy Policy </a></li>
             </ul>
           </div>
         </div>
 
         <div class="apps-link">
           <ul>
-            <li><a href=""> <i class="fab fa-apple"></i> App Store</a></li>
-            <li><a href=""><i class="fab fa-google-play"></i> Google Play</a></li>
+            <li><a href="https://apps.apple.com/us/app/starlink/id1537177988" target="_blank"> <i class="fab fa-apple"></i> App Store</a></li>
+            <li><a href="https://play.google.com/store/apps/details?id=com.starlink.mobile" target="_blank"><i class="fab fa-google-play"></i> Google Play</a></li>
           </ul>
         </div>
        </div>
@@ -575,6 +565,25 @@
   
  
   autoplaySpeed: 2000,
+  responsive: [
+    {
+      breakpoint: 992,
+      settings: {
+        arrows: false,
+       
+        slidesToShow: 2
+      }
+    },
+    {
+      breakpoint: 800,
+      settings: {
+        arrows: false,
+        slidesToShow: 1,
+        slidesToScroll: 1,
+     
+      }
+    }
+  ]
 });
   </script>
 </body>
